# secrets-test

./: .gitattributes  README.md  pyproject.toml  secrets-test.py
.github/workflows/: main.yml
